# ComfyUI_CreaPrompt

./: README.md  __init__.py  creaprompt.py  enhancer_presets.json  pyproject.toml
WF/: CreaPrompt_workflow.json  complete_node_workflow.json  four_nodes_workflow.json  krea2_turbo_CreaPrompt.json  multi_prompts_debug_workflow.json  multi_prompts_workflow.json  one_node_workflow.json  three_nodes_workflow.json  two_nodes_workflow.json  weight_workflow.json
collections/: Krea2_collection.txt
csv/: 1_0Woman.csv  1_1Posing.csv  1_1Retro_woman_Lololerigolo.csv  1_7Eyes_Style.csv  1_9Fashion.csv  1_9Kontext_Transform_Man.csv  1_9Kontext_Transform_Woman.csv  1_9Kontext_change_background.csv  2_0Expressions_Malapris.csv  2_1Erotic.csv  2_1Erotic_OCOMA.csv  2_2Sports_Malapris_OCOMA.csv  2_3Actions.csv  2_5Animals.csv  2_6Fictional_Characters.csv  2_7Superheros_Lololerigolo.csv  2_8Humanoids.csv  2_9Vehicles.csv  3_1Strange building_Lololerigolo.csv  3_2Strange_place_Lololerigolo.csv  3_3Places.csv  3_5Special_Places.csv  3_6Locations.csv  3_7Sky_Malapris_OCOMA.csv  3_8Eras_Malapris.csv  4_1Z_Style.csv  4_2Artists.csv  5_0Furnitures_tables_Lololerigolo.csv  5_1Furnitures_cabinets_Lololerigolo.csv  7_7Visual_effects_Lololerigolo.csv  8_0Effects_AdelAI_Realistic.csv  8_1Styles_AdelAI_Realistic.csv  8_4Films_AdelAI_Realistic.csv  9_9Accidents_Industry_Malapris.csv  9_9Prevention_Malapris.csv  collection.txt
csv+weight/: 1_6Haircolors_Thomas_Buyle.csv  1_8Woman_Dress_Malapris_PJ.csv  2_4Films_Scenes_Malapris.csv  collection.txt
csv1/: 1_2Celebrity_Woman.csv  3_0Shotstyle.csv  (+3 more)
(+13 files in other folders)
